# sim_fut

./: pyproject.toml  readme.md  requirements.txt  run.bat  run.sh  simple_sim.py
config/: config.example.yaml  config.py  config.yaml
data/processed/leagues/: bundesliga_2025.json  premier_league_2025.json  serie_a_2025.json
data/processed/resultados/bundesliga/: resultados_bundesliga_2025-09-26_03-29-02.json  resultados_bundesliga_2025-09-26_03-29-02_jogadores.csv  resultados_bundesliga_2025-09-26_03-38-45.csv  resultados_bundesliga_2025-09-26_03-38-45.json  resultados_bundesliga_2025-09-26_03-56-24.json  resultados_bundesliga_2025-09-26_03-56-24_tabela.csv  resultados_bundesliga_2025-09-26_04-08-41.json
data/processed/resultados/la_liga/: resultados_la_liga_2025-09-26_03-57-15.json  resultados_la_liga_2025-09-26_03-57-15_tabela.csv  resultados_la_liga_2025-09-26_04-10-17.json  resultados_la_liga_2025-09-26_04-10-17_jogadores.csv
data/processed/resultados/ligue_1/: resultados_ligue_1_2025-09-26_04-11-32.csv  (+1 more)
docker/: advanced.dockerfile  docker-compose.yaml  entrypoint.sh  interface.dockerfile  simple.dockerfile
interface/: app.py
json_ligas/: la_liga_2025.json  ligue_1_2025.json
scripts/: processCSV.py  process_data.py  run_advanced.py  run_season_simulation.py  run_simple.py
src/core/: data_processor.py
src/core/advanced_sim/: __init__.py  data_loader.py
src/core/cli/: CLI_GUIDE.md  cli.bat  cli.py  help.bat  main_cli.py
src/core/simple/: simulator.py
src/tests/: quick_test.py  test_individual_stats.py  test_realism.py
(+33 files in other folders)
